Complete draft of all changes before showcase.

--- a/CAs/Continuous/life.html
+++ b/CAs/Continuous/life.html
@@ -19,9 +19,9 @@
 
   <div class="text-column">
     <h1>Continuous Automata</h1>
+    <p><i>Having issues? See our troubleshooting <a href="/troubleshooting.html">page</a></i></p>
   </div>
 
-  <div class="centre"><p> Key: green->blue = negative, darkred->yellow = positive</p></div>
   
   <div class="controlPanel">
     <!-- Kernel Grid: divided into 3 control groups for aesthetic grid purposes-->
@@ -91,6 +91,9 @@
     <div class="footerElement" id="framesDisplayed">Displays every Nth frame</div>
   </div>
 
+  <div class="centre">
+    <p> Key: green->blue = negative, darkred->yellow = positive</p>
+  </div>
   <script type="module" src="life.js"></script>
 </body>
 
