--- a/CAs/Larger/life.html
+++ b/CAs/Larger/life.html
@@ -18,6 +18,7 @@
 
   <div class="text-column">
     <h1>Larger Than Life</h1>
+    <p><i>Having issues? See our troubleshooting <a href="/troubleshooting.html">page</a></i></p>
   </div>
     
   <!-- Instructions for rulestring input -->
