--- a/CAs/ConwaysLife/life.html
+++ b/CAs/ConwaysLife/life.html
@@ -19,6 +19,7 @@
 
   <div class="text-column">
     <h1>Game of Life</h1>
+    <p><i>Having issues? See our troubleshooting <a href="/troubleshooting.html">page</a></i></p>
   </div>
 
   <canvas width="512" height="512" />
