--- a/CAs/LifeLike/life.html
+++ b/CAs/LifeLike/life.html
@@ -21,6 +21,7 @@
 
   <div class="text-column">
     <h1>LifeLike Cellular Automata</h1>
+    <p><i>Having issues? See our troubleshooting <a href="/troubleshooting.html">page</a></i></p>
   </div>
 
   <div class="controlPanel">
