--- a/CAs/LifeLike/life.html
+++ b/CAs/LifeLike/life.html
@@ -5,10 +5,8 @@
   <meta charset="utf-8" />
   <title>WebGPU Life: LifeLike</title>
   <link rel="stylesheet" href="../Shared/style.css"> <!-- Link to the CSS file -->
+  <link rel="icon" type="image/x-icon" href="../../Images/favicon.ico">
 </head>
-
-
-
 <body>
   <div class="navbar">
     <a href="https://www.deepneuron.org/">
