--- a/CAs/ConwaysLife/life.html
+++ b/CAs/ConwaysLife/life.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <title>WebGPU Life</title>
   <link rel="stylesheet" href="../Shared/style.css"> <!-- Link to the CSS file -->
+  <link rel="icon" type="image/x-icon" href="../../Images/favicon.ico">
 </head>
 
 <body>
