--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>About Us</title>
   <link rel="stylesheet" href="./CAs/Shared/style.css"> <!-- Link to the CSS file -->
+  <link rel="icon" type="image/x-icon" href="./Images/favicon.ico">
 </head>
 <body>
   <div class="navbar">
