Updating the website to be presentable with the new NCA model

--- a/CAs/GCA/life.html
+++ b/CAs/GCA/life.html
@@ -8,7 +8,8 @@
 </head>
 
 <div class="text-column">
-  <h1>GROWING CA YEAAAAA</h1>
+  <h1>Growing Neural Cellular Automata </h1>
+  <h2><i>Work in progress</i></h2>
 </div>
 
 <body>
