Revert "Rearranging webpage files and refactoring for that"
This reverts commit 3fa99c3efba8ddc4d028d4313ca8d024157a05de.

--- a/CAs/Continuous/life.html
+++ b/CAs/Continuous/life.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <title>WebGPU Life</title>
   <link rel="stylesheet" href="../Shared/style.css"> <!-- Link to the CSS file -->
-  <link rel="icon" type="image/x-icon" href="../../Pages/Images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="../../Images/favicon.ico">
 </head>
 
 <body>
@@ -14,13 +14,13 @@
       <img src="../Shared/mdn_logo.png" alt="Logo" style="height: 20px; vertical-align: middle;">
     </a>
     <a href="/">Home</a>
-    <a href="/Pages/about.html">About</a>
+    <a href="/about.html">About</a>
     <a href="https://www.deepneuron.org/contact-us">Contact Us</a>
   </div>
 
   <div class="text-column">
     <h1>Continuous Automata</h1>
-    <p><i>Having issues? See our troubleshooting <a href="/Pages/troubleshooting.html">page</a></i></p>
+    <p><i>Having issues? See our troubleshooting <a href="/troubleshooting.html">page</a></i></p>
   </div>
 
   
