--- a/CAs/Larger/life.html
+++ b/CAs/Larger/life.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8" />
   <title>WebGPU Life</title>
@@ -14,13 +13,13 @@
       <img src="../Shared/mdn_logo.png" alt="Logo" style="height: 20px; vertical-align: middle;">
     </a>
     <a href="/">Home</a>
-    <a href="/Pages/about.html">About</a>
+    <a href="/about.html">About</a>
     <a href="https://www.deepneuron.org/contact-us">Contact Us</a>
   </div>
 
   <div class="text-column">
     <h1>Larger Than Life</h1>
-    <p><i>Having issues? See our troubleshooting <a href="/Pages/troubleshooting.html">page</a></i></p>
+    <p><i>Having issues? See our troubleshooting <a href="/troubleshooting.html">page</a></i></p>
   </div>
     
   <!-- Instructions for rulestring input -->
