--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport">
   <title>Neural Cellular Automata</title>
   <link rel="stylesheet" href="./CAs/Shared/style.css"> <!-- Link to the CSS file -->
-  <link rel="icon" type="image/x-icon" href="./Pages/Images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./Images/favicon.ico">
 </head>
 <body>
   <div class="navbar">
@@ -13,7 +13,7 @@
       <img src="./CAs/Shared/mdn_logo.png" alt="Logo" style="height: 20px; vertical-align: middle;">
     </a>
     <a href="/">Home</a>
-    <a href="/Pages/about.html">About</a>
+    <a href="/about.html">About</a>
     <a href="https://www.deepneuron.org/contact-us">Contact Us</a>
   </div>
 
@@ -44,7 +44,7 @@
   </div>
 
   <div class = "centre">
-    <img src="./Pages/Images/gca_demo.gif">
+    <img src="./gca_demo.gif">
   </div>
 
   <div class="centre">
@@ -181,16 +181,16 @@
         </ul>
       </div>
       <div class="sideDiagramContainer">
-         <img src="./Pages/Images/GoL neighbourhood.png" class="sideDiagram" 
+         <img src="./Images/GoL neighbourhood.png" class="sideDiagram" 
               alt="The neighbourhood of each cell consists of the cells in contact with it.">
          <p class="figureCaption">The neighbourhood of each cell consists of 
           the cells in contact with it.</p>
-         <img src="./Pages/Images/LargerRadius2.png" class="sideDiagram"
+         <img src="./Images/LargerRadius2.png" class="sideDiagram"
               alt="The neighbourhood in larger than life also contains all the 
               cells within a specified distance from the target cell">
           <p class="figureCaption">Neighbourhood of a target cell in Larger 
             than Life when the neighbourhood radius is set to 2 cells</p>
-          <img src="./Pages/Images/LargerNeighbourhoodTypes.png" class="sideDiagram">
+          <img src="./Images/LargerNeighbourhoodTypes.png" class="sideDiagram">
           <p class="figureCaption">Different neighbourhood shapes/different 
             ways of determining a cell's distance from the target cell</p>
       </div>
@@ -208,7 +208,7 @@
       continuous range of values. The new cell state value is calculated in 
       the following way:
     </p>
-    <img src="./Pages/Images/Continuous.png" class="centreDiagram"  alt="Calculating continuous CA"  >
+    <img src="./Images/Continuous.png" class="centreDiagram"  alt="Calculating continuous CA"  >
   </div>
 </body>
 </html>
