--- a/CAs/LifeLike/life.html
+++ b/CAs/LifeLike/life.html
@@ -5,22 +5,21 @@
   <meta charset="utf-8" />
   <title>WebGPU Life: LifeLike</title>
   <link rel="stylesheet" href="../Shared/style.css"> <!-- Link to the CSS file -->
-  <link rel="icon" type="image/x-icon" href="../../Pages/Images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="../../Images/favicon.ico">
 </head>
-
 <body>
   <div class="navbar">
     <a href="https://www.deepneuron.org/">
       <img src="../Shared/mdn_logo.png" alt="Logo" style="height: 20px; vertical-align: middle;">
     </a>
     <a href="/">Home</a>
-    <a href="/Pages/about.html">About</a>
+    <a href="/about.html">About</a>
     <a href="https://www.deepneuron.org/contact-us">Contact Us</a>
   </div>
 
   <div class="text-column">
     <h1>LifeLike Cellular Automata</h1>
-    <p><i>Having issues? See our troubleshooting <a href="/Pages/troubleshooting.html">page</a></i></p>
+    <p><i>Having issues? See our troubleshooting <a href="/troubleshooting.html">page</a></i></p>
   </div>
 
   <div class="controlPanel">
