--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
       <img src="./CAs/Shared/mdn_logo.png" alt="Logo" style="height: 20px; vertical-align: middle;">
     </a>
     <a href="/">Home</a>
-    <a href="/Pages/about.html">About</a>
+    <a href="/about.html">About</a>
     <a href="https://www.deepneuron.org/contact-us">Contact Us</a>
   </div>
 </body>
